objects/Module_Role__c.object
<CustomObject><fields>
        <fullName>Linked_Module__c</fullName>
        <formula>If (Len( Module__c )&gt;0,  
   HYPERLINK( Module__r.Id , Module__r.Name), 
   If (Len(  Module_Version__c )&gt;0, 
       HYPERLINK(  Module_Version__r.Id , Module_Version__r.Name ), 
       "Error"
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that takes either the Module or Module Version, depending on which record is linked</inlineHelpText>
        <label>Linked Module</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Module_Active__c</fullName>
        <formula>If (Len( Module__c )&gt;0,
   IF (  Module__r.Active__c = True, True, False),
   If (Len( Module_Version__c )&gt;0,
      If (  Module_Version__r.Active__c = True, True, False),
   False
   )  
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Active?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Module_Role__c</fullName>
        <description>Defines role for Module Spec, and against Module Instance for VLE integration</description>
        <label>Module Role</label>
        <picklist>
            <picklistValues>
                <fullName>Module Convenor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Examiner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Teacher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Module_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Module_Version__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Versions</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Module_Version__c</referenceTo>
        <relationshipLabel>Staff with Roles</relationshipLabel>
        <relationshipName>Module_Roles</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Staff with Roles</relationshipLabel>
        <relationshipName>Module_Roles</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Staff__c</fullName>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Module Roles</relationshipLabel>
        <relationshipName>Module_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Title__c</fullName>
        <formula>Staff__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Join object between Staff (Contacts) and Modules (both Instances and Version objects). Will allow definition of staff role on a module and be used in VLE integration to define extent of staff enrolment.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Module Role</label><nameField>
        <displayFormat>MR-{00000000}</displayFormat>
        <label>Module Role Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Module Roles</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Staff__c</columns>
        <columns>Module__c</columns>
        <columns>Module_Active__c</columns>
        <columns>Module_Role__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Enforce_Valid_Role</fullName>
        <active>true</active>
        <description>Does not allow saving of record unless specific Module Role has been chosen</description>
        <errorConditionFormula>ISPICKVAL( Module_Role__c ,"") = TRUE</errorConditionFormula>
        <errorDisplayField>Module__c</errorDisplayField>
        <errorMessage>Please choose Module Role (this field cannot be left null if record is to be saved)</errorMessage>
    </validationRules></CustomObject>